- Unrelease

02-10-2020

- Version 3.3.4

  - FIX: Remove trailing comma incorrectly added in ec60d8865.

18-09-2020

- Version 3.3.3

  - FIX: `queue_in_memory` option not being passed to the backends.
  - FIX: `MessageBus::DistributedCache#publish` should raise on error.

    On the redis backend, any errors encountered during `MessageBus#publish`
    will add the message into an in memory queue and silently swallow the
    error. While this is behavior is OK for normal message_bus usage, it may
    lead to inconsistency when using `DistributedCache`. If a process
    doesn't publish successfully to another process, it will still update
    its in memory cache leaving the other processes unaware. As such, the
    distributed cache is out of sync and will require another successful
    write to the cache to resync all the caches.

15-09-2020

- Version 3.3.2

  - FIX: In the JavaScript client throw when when lastId is given but is not a number.
  - FEATURE: raise when attempting to publish to invalid targets
  - Log when DistributedCache encounters an error when publishing.

09-06-2020

- Version 3.3.1

  - FIX: Disconnect Redis conn when rescuing errors in global subscribe.
  - FIX: `MessageBus::Backends::Redis#global_subscribe` not closing Redis connections.

15-05-2020

- Version 3.3.0

   - FEATURE: `MessageBus.base_route=` to alter the route that message bus will listen on.

07-05-2020

- Version 3.2.0

   - FIX: compatability with Rails 6.0.3, note: apps without ActionDispatch::Flash may stop working after this upgrade
   to correct this disable middleware injection with `config.skip_message_bus_middleware = true` and configure middleware by hand with `app.middleware.use(MessageBus::Rack::Middleware)`

28-04-2020

- Version 3.1.0

  - FEATURE: `MessageBus#register_client_message_filter` to register a custom filter so that messages can be inspected and filtered away from clients.

27-04-2020

- Version 3.0.0

  - Drop support for Ruby 2.3